{
  "version": 4,
  "terraform_version": "1.1.5",
  "serial": 15,
  "lineage": "e070235b-1c2e-13aa-9278-011d581d273c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d997c5f64a74852c",
            "arn": "arn:aws:ec2:us-east-1:321126247163:instance/i-08e2ee561fae333b2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08e2ee561fae333b2",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-002530c7cdfb08fc9",
            "private_dns": "ip-10-1-1-20.ec2.internal",
            "private_ip": "10.1.1.20",
            "public_dns": "ec2-75-101-236-6.compute-1.amazonaws.com",
            "public_ip": "75.101.236.6",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-091f8d6dbf29fef75",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03a0adb84bd974cf4",
            "tags": {
              "CostCenter": "ABCD",
              "Env": "Prod",
              "Name": "Server-1",
              "Owner": "Sree"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0910a3663988ec749"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_all",
            "aws_subnet.subnet1-public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:321126247163:internet-gateway/igw-0a806ad38ff839bf4",
            "id": "igw-0a806ad38ff839bf4",
            "owner_id": "321126247163",
            "tags": {
              "Name": "terraform-aws-igw"
            },
            "vpc_id": "vpc-0ae44499c9303bce4"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ac588706f0d15c4c",
            "owner_id": "321126247163",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a806ad38ff839bf4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform_Main_table-testing"
            },
            "vpc_id": "vpc-0ae44499c9303bce4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02dea7fc7e0cc4aa1",
            "route_table_id": "rtb-0ac588706f0d15c4c",
            "subnet_id": "subnet-03a0adb84bd974cf4"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.subnet1-public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:321126247163:security-group/sg-0910a3663988ec749",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0910a3663988ec749",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all",
            "name_prefix": "",
            "owner_id": "321126247163",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0ae44499c9303bce4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:321126247163:subnet/subnet-03a0adb84bd974cf4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-03a0adb84bd974cf4",
            "map_public_ip_on_launch": false,
            "owner_id": "321126247163",
            "tags": {
              "Name": "Terraform_Public_Subnet1-testing"
            },
            "vpc_id": "vpc-0ae44499c9303bce4"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:321126247163:subnet/subnet-01faa31c22437f03a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.2.0/24",
            "id": "subnet-01faa31c22437f03a",
            "map_public_ip_on_launch": false,
            "owner_id": "321126247163",
            "tags": {
              "Name": "Terraform_Public_Subnet2-testing"
            },
            "vpc_id": "vpc-0ae44499c9303bce4"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet3-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:321126247163:subnet/subnet-0e8b606c34eeb5aa3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.3.0/24",
            "id": "subnet-0e8b606c34eeb5aa3",
            "map_public_ip_on_launch": false,
            "owner_id": "321126247163",
            "tags": {
              "Name": "Terraform_Public_Subnet3-testing"
            },
            "vpc_id": "vpc-0ae44499c9303bce4"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:321126247163:vpc/vpc-0ae44499c9303bce4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-03df37b074dd6c744",
            "default_route_table_id": "rtb-0fbd2c02dd94526e9",
            "default_security_group_id": "sg-03f38f27e8071fafe",
            "dhcp_options_id": "dopt-03c362e738c77a8ef",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ae44499c9303bce4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0fbd2c02dd94526e9",
            "owner_id": "321126247163",
            "tags": {
              "Name": "terraform-aws-testing",
              "Owner": "Sreeharsha Veerapalli",
              "environment": "dev"
            }
          }
        }
      ]
    }
  ]
}